--- a/GenCon-iOS/GenCon-iOS/Storyboards/Base.lproj/Main.storyboard
+++ b/GenCon-iOS/GenCon-iOS/Storyboards/Base.lproj/Main.storyboard
@@ -417,7 +417,11 @@
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="abd-5p-K2D"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Announce" id="Q9t-Bl-6x5"/>
+                    <navigationItem key="navigationItem" title="Announce" id="Q9t-Bl-6x5">
+                        <barButtonItem key="rightBarButtonItem" image="add" id="SH3-jT-oth">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="O44-Ya-8I9" id="6N4-Te-ezh"/>
